feat: add subject detail api
