# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\V1\ProgramController;
+use App\Http\Controllers\Api\V1\ShowSubjectController;
 use App\Http\Controllers\Api\V1\SubjectController;
 use App\Http\Controllers\Api\V1\UniversityController;
 
@@ -13,4 +14,6 @@ Route::prefix('v1')->as('api.v1.')
             ->name('universities.programs.index');
         Route::get('subjects', SubjectController::class)
             ->name('subjects.index');
+        Route::get('subjects/{subjectId}', ShowSubjectController::class)
+            ->name('subjects.show');
     });
